# loader

./: .gitignore  CMakeLists.txt  README.md  albthermo.json
src/: CCSMAlbedo.cpp  CMakeLists.txt  Configurator.cpp  IAlbedo.cpp  IAlbedoModule.cpp  ModuleLoader.cpp  SNU2Albedo.cpp  SNUAlbedo.cpp  main.cpp  main2.cpp  moduleLoaderAssignments.ipp  moduleLoaderBuilder.py  moduleLoaderFunctions.ipp  moduleLoaderHeaders.ipp  moduleLoaderNames.ipp  moduleloader_builder.py  thermoIce0.cpp  thermoWinton.cpp
src/include/: CCSMAlbedo.hpp  Configurator.hpp  IAlbedo.hpp  IAlbedoModule.hpp  Ithermodynamics.hpp  Module.hpp  ModuleLoader.hpp  SNU2Albedo.hpp  SNUAlbedo.hpp  modules_implementations.ipp  thermoIce0.hpp  thermoWinton.hpp
src/modules/: CMakeLists.txt  moduleloader_builder.py  modules.json
test/: ArgV.cpp  ArgV.hpp  CMakeLists.txt  ConfiguredModule_test.cpp  ModuleLoader_test.cpp
test/ModuleLoaderTestModules/: moduleLoaderAssignments.ipp  moduleLoaderFunctions.ipp
